--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^5.0.1",
     "supertest": "^3.0.0",
     "webpack": "^4.0.1",
+    "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
